[project]
name = "alaska-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "allure-pytest>=2.16.0",
    "pytest>=9.0.3",
    "requests>=2.34.2",
]

[tool.pytest.ini_options]
addopts = "-v --alluredir=allure-results"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
